# dhewm3

./: .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.md  Configuration.md  LEGAL.md  README.md  README.txt  build.sh  run.sh
neo/: ADoom3.info.src  CMakeLists.txt  SConstruct  codechanges.txt  config.h.in  mmakefile.src
neo/MayaImport/: exporter.h  maya_main.cpp  maya_main.h
neo/TypeInfo/: TypeInfoGen.cpp  TypeInfoGen.h  main.cpp
neo/cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_trace.cpp  CollisionModel_translate.cpp
neo/d3xp/: AF.h  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  EndLevel.cpp  EndLevel.h  Entity.cpp  Entity.h  Fx.cpp  Fx.h  Game.h  GameBase.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  Grabber.h  IK.cpp  IK.h  Item.cpp  Item.h  Light.cpp  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  (+21 more)
neo/d3xp/ai/: AAS.h  AAS_debug.cpp  AAS_local.h  AAS_pathing.cpp  AAS_routing.cpp  AI.cpp  AI.h  AI_Vagary.cpp  AI_events.cpp  AI_pathing.cpp
neo/d3xp/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp  Anim_Import.cpp  Anim_Testmodel.cpp  Anim_Testmodel.h
neo/d3xp/gamesys/: Callbacks.cpp  Class.cpp  Class.h  DebugGraph.cpp  DebugGraph.h  Event.cpp  Event.h  NoGameTypeInfo.h  SaveGame.cpp  SaveGame.h  SysCmds.cpp  SysCvar.cpp  SysCvar.h  TypeInfo.cpp  TypeInfo.h
neo/d3xp/physics/: Clip.cpp  Force.cpp  Force.h  Force_Constant.cpp  Force_Constant.h  Force_Drag.cpp  Force_Drag.h  Force_Field.cpp  Force_Field.h  Force_Grab.cpp  Force_Grab.h  Force_Spring.cpp  Force_Spring.h  Physics.cpp  Physics.h  Physics_AF.cpp  Physics_AF.h  Physics_Actor.cpp  Physics_Actor.h  Physics_Base.h  Physics_Monster.cpp  Physics_Parametric.cpp  Physics_Parametric.h  Physics_Player.cpp  Physics_Player.h  Physics_RigidBody.cpp  Physics_RigidBody.h  Physics_StaticMulti.cpp  Physics_StaticMulti.h  Push.cpp  Push.h
neo/d3xp/script/: Script_Compiler.cpp  Script_Compiler.h  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp  Script_Program.h  Script_Thread.cpp  Script_Thread.h
neo/framework/: BuildDefines.h  BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Compressor.cpp  Compressor.h  Console.cpp  Console.h  DeclAF.cpp  DeclAF.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclManager.h  DeclPDA.cpp  DeclPDA.h  DeclParticle.cpp  DeclParticle.h  DeclSkin.cpp  DeclSkin.h  DeclTable.cpp  DeclTable.h  DemoChecksum.h  DemoFile.cpp  DemoFile.h  Dhewm3SettingsMenu.cpp  EditField.cpp  EditField.h  EventLoop.cpp  EventLoop.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  (+14 more)
neo/framework/async/: AsyncClient.cpp  AsyncClient.h  AsyncNetwork.cpp  AsyncNetwork.h  AsyncServer.cpp  AsyncServer.h  MsgChannel.cpp  MsgChannel.h  NetworkSystem.cpp  NetworkSystem.h  ServerScan.cpp  ServerScan.h
neo/framework/miniz/: miniz.h  minizconf.h
neo/framework/minizip/: MiniZip64_info.txt  ioapi.c  ioapi.h  unzip.cpp  unzip.h
neo/game/: AF.cpp  AF.h  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Fx.cpp  Fx.h  Game.h  GameBase.h  GameEdit.cpp  GameEdit.h  Game_local.cpp  Game_local.h  Game_network.cpp  IK.h  Item.cpp  Item.h  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerIcon.cpp  PlayerIcon.h  PlayerView.cpp  PlayerView.h  (+17 more)
neo/game/ai/: AAS.cpp  AAS.h  (+7 more)
neo/idlib/: Base64.cpp  Base64.h  BitMsg.cpp  BitMsg.h  CmdArgs.cpp  CmdArgs.h  Dict.cpp  Dict.h  Heap.cpp  Heap.h  LangDict.cpp  LangDict.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  Parser.cpp  Parser.h  Str.cpp  Str.h  Timer.cpp  Timer.h  Token.cpp  Token.h  precompiled.cpp  precompiled.h
neo/mods/: CMakeLists.txt  README.md  readme.txt
neo/openal/: idal.py  stubs.cpp
neo/renderer/: Cinematic.cpp  Cinematic.h  GuiModel.cpp  GuiModel.h  Image.h  Image_files.cpp  Image_init.cpp  Image_load.cpp  Image_process.cpp  Image_program.cpp  Interaction.cpp  Interaction.h  Material.cpp  Material.h  MegaTexture.cpp  MegaTexture.h  Model.cpp  Model.h  ModelDecal.cpp  ModelDecal.h  ModelManager.cpp  ModelManager.h  ModelOverlay.cpp  ModelOverlay.h  Model_ase.cpp  Model_ase.h  Model_beam.cpp  Model_liquid.cpp  Model_local.h  Model_lwo.cpp  Model_lwo.h  Model_ma.cpp  Model_ma.h  Model_md3.cpp  Model_md3.h  Model_md5.cpp  Model_prt.cpp  Model_sprite.cpp  RenderEntity.cpp  RenderSystem.cpp  (+48 more)
neo/sound/: efxlib.h  snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp  sound.h  stb_vorbis.h  stbvorbis_impl.c
neo/sys/: cpu.cpp  doom_icon.h  events.cpp  glimp.cpp  glimp_ati_fragment_shader.cpp  glimp_ati_fragment_shader.h  imgui_savestyle.cpp  platform.h  proggyvector_font.h  proggyvector_font_base85.h  sys_imgui.cpp  sys_imgui.h  sys_local.cpp  sys_local.h  sys_public.h  sys_sdl.h  threads.cpp
neo/tools/: edit_gui_common.cpp  edit_gui_common.h  edit_public.h  edit_stub.cpp
neo/ui/: BindWindow.cpp  BindWindow.h  ChoiceWindow.cpp  ChoiceWindow.h  DeviceContext.cpp  DeviceContext.h  EditWindow.cpp  EditWindow.h  FieldWindow.cpp  FieldWindow.h  GameBearShootWindow.cpp  GameBearShootWindow.h  GameBustOutWindow.cpp  GameBustOutWindow.h  GameSSDWindow.cpp  GameSSDWindow.h  GameWindow.cpp  GameWindow.h  GuiScript.cpp  GuiScript.h  ListGUI.cpp  ListGUI.h  ListGUILocal.h  ListWindow.cpp  ListWindow.h  MarkerWindow.cpp  MarkerWindow.h  Rectangle.h  RegExp.cpp  RegExp.h  RegExp_old.h  RenderWindow.cpp  RenderWindow.h  SimpleWindow.cpp  SimpleWindow.h  SliderWindow.cpp  SliderWindow.h  UserInterface.cpp  UserInterface.h  UserInterfaceLocal.h  (+4 more)
(+1183 files in other folders)
